# Manuens

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: config.py  main.py  models.py  observability.py
app/analysis/: ambiguities.py  deviations.py  engine.py  gaps.py  recoverability.py  severity.py
app/extraction/: base.py  fake.py  llm.py
app/static/: style.css
app/storage/: repository.py
app/templates/: base.html  index.html  run.html
app/templates/partials/: _analysis.html
data/examples/: bad_calibration.txt  clean_run.txt  moderate_chronological.txt
data/protocols/: co_immunoprecipitation.json  plasmid_transfection.json
tests/integration/: test_healthz.py  test_runs.py
tests/unit/: test_ambiguities.py  test_deviations.py  test_engine.py  test_extraction_contract.py  test_gaps.py  test_models.py  test_observability.py  test_recoverability.py  test_repository.py  test_severity.py
